tests/ui/nll/borrowed-universal-error.stderr
error[E0515]: cannot return value referencing temporary value
  --> $DIR/borrowed-universal-error.rs:7:5
   |
LL |     gimme(&(v,))
   |     ^^^^^^^----^
   |     |      |
   |     |      temporary value created here
   |     returns a value referencing data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
